добавила иконки, убрала фиксированную ширину у background-img

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 .container {
     max-width: 1130px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .menu {
@@ -35,7 +36,6 @@ body {
 .about-us {
     background-image: url("./img/Heading.png");
     height: 400px;
-    width: 1820px;
 }
 
 .smoothie {
@@ -60,15 +60,26 @@ p {
     align-items: center;
 }
 
-.statistics {
+.statistics-image {
     background-image: url("./img/Rectangle\ 8.png");
     height: 600px;
-    width: 1820px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.statistics {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .icon {
     color: #FFFFFF;
     font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .quantity {
