--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,11 @@ body {
 .about-us {
     background-image: url("./img/Heading.png");
     height: 400px;
-    /* color: #FFFFFF;*/
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: #FFFFFF;
 }
 
 .smoothie {
@@ -46,18 +50,13 @@ body {
 
 h1{
     font-size: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    margin-bottom: 0;
 }
 
 h2{
     font-size: 30px;
     font-family:'Waiting for the Sunrise', cursive;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 0;
 }
 
 h3{
