--- a/src/styles.css
+++ b/src/styles.css
@@ -129,11 +129,29 @@ p {
     display: flex;
     flex-direction: row;
     align-items: center;
+    border: 1px solid;
+    padding: 30px 0; 
+    min-width: 558px;
+    min-height: 380px;
 }
 
 .member_reversed {
     flex-direction: row-reverse;
 }
 
+.circle {
+    border-radius: 50%;
+}
 
+.members {
+    display: flex;
+    flex-wrap: wrap;
+}
 
+footer {
+    background-image:url("./img/footer.png"); 
+    position: absolute;
+    width: 100%;
+    max-height: 440px;
+    height: 100%;
+}
