--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ body {
     margin-bottom: 60px;
 }
 
-h1{
+h1 {
     font-size: 50px;
     margin-bottom: 0;
 }
@@ -65,8 +65,7 @@ h3{
     margin-bottom: 12px;
 }
 
-h4 {
-    font-size: 50px;
+h1 > .team {
     color: #433840;
     margin-top: 57px;
     margin-bottom: 0;
@@ -125,33 +124,80 @@ p {
     margin-top: 0;
 }
 
+.members {
+    display: grid;
+    grid-template-columns: repeat(2, 558px);
+    grid-template-rows: repeat(2, 380px) ;
+    grid-gap: 25px;
+}
+
 .member {
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 1px solid;
-    padding: 30px 0; 
-    min-width: 558px;
-    min-height: 380px;
+    padding: 25px 0; 
+
 }
 
 .member_reversed {
     flex-direction: row-reverse;
 }
 
+.member_reversed > .member-description{
+    margin-right: 15px;
+    margin-left: 0;
+}
+
 .circle {
     border-radius: 50%;
 }
 
-.members {
-    display: flex;
-    flex-wrap: wrap;
+.member-description {
+    margin-left: 15px;
 }
 
-footer {
+.member-description > h1 {
+    font-size: 30px;
+    /*color: #ffffff;*/
+}
+
+.member-description > h2 {
+    font-size: 20px;
+}
+
+.member-description > p {
+    font-size: 15px;
+}
+
+.footer {
+    margin-top: 130px ;
+
+}
+
+.footer-first {
     background-image:url("./img/footer.png"); 
     position: absolute;
     width: 100%;
     max-height: 440px;
     height: 100%;
+    font-size: 20px;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
 }
+
+.working-hours {
+    color: #DFEEB6;;
+}
+
+.footer-second {
+   /* background-color: #433840;
+    position: absolute;
+    width: 100%;
+    max-height: 60px;
+    height: 100%; */
+}
+
